skill-desc_change

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div class="skills-row">
             <img class="skil" src="assets/coding.png" alt="skills-icon">
             <h3>Web development</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error veniam nihil, laborum, assumenda nesciunt temporibus perferendis voluptas nobis vel voluptatibus commodi quasi accusantium veritatis repudiandae rerum consectetur dignissimos sunt quod!</p>
+            <p>I can create Front-end designs using my knowledge of HTML, CSS, Bootstrap and Javascript. Using lots of my own creativity to create visually stunning web pages and amazing stuff.</p>
         </div>
         <div class="skills-row">
             <img class="skil2" src="assets/web-design.png" alt="skill-icon">
             <h3>Web design</h3> 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo facere voluptate dicta quaerat cupiditate iusto reiciendis expedita consequatur dolor incidunt cumque neque esse, voluptatem enim fugit recusandae? Sint, modi illum.</p>
+            <p>Using my web design skill i can create mind boggling visuals for the website and it's different sections.</p>
         </div>
         <hr>
         <div class="contact">
